@@ -5,6 +5,7 @@
 3. Fix 'Show when wide enough' string.
 4. Show home button in certain diaogs, if requested by caller, regardless of
    setting.
+5. If a SlimBrowse header has no actions then ignore clicks.
 
 6.1.6
 -----
